--- a/Version 3/V3-Project-4/uni-sass/asset/css/layout/header.scss
+++ b/Version 3/V3-Project-4/uni-sass/asset/css/layout/header.scss
@@ -8,8 +8,7 @@
     z-index: 4;
     color: #fff;
     transition: all 0.3s ease-in-out;
-    display: flex;
-    align-items: center;
+    
     &-top {
         position: relative;
         display: flex;
@@ -18,6 +17,7 @@
         margin: auto;
         
         transition: all 0.3s ease-in-out;
+        
         &__logo {
             height: 40px;
             line-height: 40px;
@@ -191,13 +191,29 @@
 }
 @media screen and(max-width:991px) {
     .header {
+        &.bg{
+            & .header-top{
+                & .header-top__link{
+                    padding: 0;
+                }
+            }
+            
+        }
         &-top {
+            padding: 27px 0;
             &__menu {
                 flex-direction: column;
                 flex-basis: 100%;
                 max-height: 0vh;
                 overflow: hidden;
                 transition: all ease-in-out 0.3s;
+                background-color: #1b1d1f !important;
+                color: #fff !important;
+                & .header-top__link{
+                    padding: 0;
+                    
+                    justify-content: left;
+                }
                 :nth-child(1) {
                     font-size: 16px;
                     margin: 30px 0;
@@ -241,6 +257,7 @@
                     transition: all ease-in-out 0.3s;
                     background-color:transparent;
                     color: $text-black;
+
                 }
             }
             &__btn {
@@ -402,14 +419,18 @@
     @extend .banner;
     position: relative;
     padding-bottom: 200px;
-    z-index: -2;
+    z-index: 0;
     & .at-content{
-        
+        transform: translateY(30px);
+        opacity: 0;
+        transition: all 0.6s ease-in-out;
     }
     &.animation-active{
         & .at-content{
-
+            transform: translateY(0px);
+            opacity: 1;
         }
+
     }
     &-title{
         font-size: 35px;
@@ -472,8 +493,11 @@
                 color: $text-black;
                 border-radius: 100%;
             }
+            
         }
+        
     }
+    
     &-sponser{
         padding-bottom: 30px;
         background-color: $bg-3;
@@ -485,7 +509,7 @@
         height: 35%;
         @include display(center);
         z-index: -1;
-        &__list{
+        & .product-sponser__list{
             @include display(space-evenly);
             margin-top: 235px;
             & .sponser__img{
@@ -516,7 +540,7 @@
             height: 35%;
             &__list{
                 @include display(space-evenly);
-                margin-top: 110px;
+                margin-top: 110px !important;
                 & .sponser__img{
                     margin: 0 15px;
                 }
@@ -610,7 +634,7 @@
     @extend.banner;
     text-align: center;
     color: #fff;
-    z-index: -2;
+    z-index: 0;
     &-img{
         max-width: 72px;
         min-height: 72px;
