--- a/Version3/V3-Project-4/uni-sass/asset/css/settings/global.scss
+++ b/Version3/V3-Project-4/uni-sass/asset/css/settings/global.scss
@@ -13,6 +13,14 @@ ul,li{
 a{
     text-decoration: none;
     display: inline-block;
+    &:focus{
+        outline: none;
+    }
+}
+button{
+    &:focus{
+        outline: none;
+    }
 }
 img{
     width: 100%;
