--- a/Version3/V3-Project-4/uni-sass/asset/css/layout/header.scss
+++ b/Version3/V3-Project-4/uni-sass/asset/css/layout/header.scss
@@ -15,6 +15,7 @@
         margin: auto;
         transition: all 0.3s ease-in-out;
         position: relative;
+        padding: 0 36px ;
         &__logo {
             height: 40px;
             line-height: 40px;
@@ -40,55 +41,66 @@
             justify-content: center;
             align-items: center;
             & .header-top__link{
-                @include height(100%);
+                width: 100%;
                 @include display(center);
                 cursor: pointer;
                 padding: 44px 0;
                 transition: padding 0.3s ease-in-out;
                 &:hover{
-                    color: rgba(255, 255, 255, 0.5);
                     .menu-hover{
                         display: block;
                     }
                 }
+                & .link-menu{
+                    
+                    width: 100%;
+                    color: #fff;
+                    
+                    line-height: normal;
+
+                    &:hover{
+                        color: rgba(255, 255, 255, 0.5);
+                        
+                    }
+                }
+                
             }
-            & li:nth-child(1) {
+            & .header-top__link:nth-child(1) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
                 
             }
-            & li:nth-child(2) {
+            & .header-top__link:nth-child(2) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
             }
-            & li:nth-child(3) {
+            & .header-top__link:nth-child(3) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
             }
-            & li:nth-child(4) {
+            & .header-top__link:nth-child(4) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
             }
-            & li:nth-child(5) {
+            & .header-top__link:nth-child(5) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
             }
-            & li:nth-child(6) {
+            & .header-top__link:nth-child(6) {
                 font-size: 13px;
                 margin-right: 30px;
                 @include font(600);
             }
-            & li:nth-child(7) {
+            & .header-top__link:nth-child(7) {
                 font-size: 13px;
                 @include font(600);
             }
             & .menu-hover{
-                display: flex;
                 width: 100%;
                 min-width: 208px;
                 background-color: #141618;
@@ -125,6 +137,10 @@
                         padding: 9 9 14px 9;
                         font-size: 15px;
                         font-weight: 600;
+                        color: #fff;
+                        &:hover{
+                            color: rgba(255, 255, 255, 0.5);
+                        }
                     }
                     & .menu-hover_list{
                         & li{
@@ -158,14 +174,15 @@
             }
             & .header-top__link{
                 padding: 27px 0;
+                & .link-menu{
+                    color: $text-black;
+                }
             }
         }
         & li:hover{
             color: rgba(48, 49, 51, 0.5);
         }
-        & i{
-            color: $text-black;
-        }
+        
     }
     &.watch{
         background-color: #fff;
@@ -193,18 +210,25 @@
         
         &.bg{
             & .header-top{
+                
                 & .header-top__logo{
                     height: 35px;
                     width: 35px;
                 }
                 & .header-top__link{
                     padding: 0;
+                    & .link-menu{
+                        color: #fff;
+                    }
                 }
+               & i{
+                   color: $text-black;
+               } 
             }
             
         }
         &-top {
-            padding: 27px 0;
+            padding: 27px 36px;
             position: initial;
             &__logo{
                 width: 35px;
@@ -212,66 +236,116 @@
             }
             &__menu {
                 flex-direction: column;
-                max-height: 0vh;
+                height: 0;
                 overflow: hidden;
-                transition: all ease-in-out 0.3s;
+                transition: all 0.5s ease-in;
                 background-color: #1b1d1f !important;
                 color: #fff !important;
                 position: absolute;
                 left: 0;
                 right: 0;
                 top:100%;
-                height: auto;
                 display: inline-block;
-                
+                padding-top: 0;
                 & .header-top__link{
-                    padding: 0;
                     justify-content: left;
+                    padding: 0;
+                    opacity: 0;
+                    transform: scale(1.1) translateY(-24px);
+                    transition:none;
+                    transition: opacity 0.3s ease-out,transform 0.3s ease-out;
+                    font-size: 13px;
+                    flex-direction: column;
+                    & .link-menu{
+                        padding: 9px 36px ;
+                        background-color: #1b1d1f;
+                    }
+                    & .menu-hover{
+                        position: initial;
+                        display: block;
+                        padding: initial;
+                        background-color: #1b1d1f;
+                        & .hover-list{
+                            display: inline-block;
+                            width: 100%;
+                            & .list-link{
+                                font-size: 13px;
+                                padding: 9px 36px;
+                                width: 100%;
+                            }
+                            & .menu-hover_list{
+                                // height: 0;
+                                overflow: hidden;
+                                & li{
+                                    font-weight: 600;
+                                    padding: 9px 36px;
+                                    margin-left: 10px;
+                                }
+                            }
+                        }
+                    }
                 }
-                :nth-child(1) {
-                    font-size: 16px;
-                    margin: 30px 15px;
-                    @include font(600);
+                & .header-top__link:nth-child(1) {
                     
-                }
-                :nth-child(2) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                    
                     @include font(600);
+                    transition-delay:0.1s
+                   
                 }
-                :nth-child(3) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                & .header-top__link:nth-child(2) {
+                    
+                    
                     @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay:0.15000000000000002s;
                 }
-                :nth-child(4) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                & .header-top__link:nth-child(3) {
+                    
+                    
                     @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay: 0.2s;
                 }
-                :nth-child(5) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                & .header-top__link:nth-child(4) {
+                    
+                    
                     @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay: 0.25s;
                 }
-                :nth-child(6) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                & .header-top__link:nth-child(5) {
+                    
+                    
                     @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay:0.30000000000000004s
                 }
-                :nth-child(7) {
-                    font-size: 16px;
-                    margin: 30px 15px;
+                & .header-top__link:nth-child(6) {
+                   
+                    
                     @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay:0.35s
+                }
+                & .header-top__link:nth-child(7) {
+                    
+                    
+                    @include font(600);
+                    transition: all 0.3s ease-in-out;
+                    transition-delay: 0.4s;
                 }
 
                 &.show {
                     display: block;
-                    max-height: 100vh;
-                    transition: all ease-in-out 0.3s;
+                    height: 912px;
                     background-color:transparent;
                     color: $text-black;
-
+                    padding-top:27px ;
+                    & .header-top__link{
+                        opacity: 1;
+                        transform: none;
+                        
+                    }
                 }
             }
             &__btn {
