--- a/Version3/V3-Project-4/uni-sass/asset/css/main.css
+++ b/Version3/V3-Project-4/uni-sass/asset/css/main.css
@@ -53,7 +53,8 @@ ul {
     align-items: center;
     margin: auto;
     transition: all 0.3s ease-in-out;
-    position: relative; }
+    position: relative;
+    padding: 0 36px; }
     .header-top__logo {
       height: 40px;
       line-height: 40px;
@@ -76,7 +77,6 @@ ul {
       justify-content: center;
       align-items: center; }
       .header-top__menu .header-top__link {
-        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -84,46 +84,49 @@ ul {
         cursor: pointer;
         padding: 44px 0;
         transition: padding 0.3s ease-in-out; }
-        .header-top__menu .header-top__link:hover {
-          color: rgba(255, 255, 255, 0.5); }
-          .header-top__menu .header-top__link:hover .menu-hover {
-            display: block; }
-      .header-top__menu li:nth-child(1) {
+        .header-top__menu .header-top__link:hover .menu-hover {
+          display: block; }
+        .header-top__menu .header-top__link .link-menu {
+          width: 100%;
+          color: #fff;
+          line-height: normal; }
+          .header-top__menu .header-top__link .link-menu:hover {
+            color: rgba(255, 255, 255, 0.5); }
+      .header-top__menu .header-top__link:nth-child(1) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(2) {
+      .header-top__menu .header-top__link:nth-child(2) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(3) {
+      .header-top__menu .header-top__link:nth-child(3) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(4) {
+      .header-top__menu .header-top__link:nth-child(4) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(5) {
+      .header-top__menu .header-top__link:nth-child(5) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(6) {
+      .header-top__menu .header-top__link:nth-child(6) {
         font-size: 13px;
         margin-right: 30px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
-      .header-top__menu li:nth-child(7) {
+      .header-top__menu .header-top__link:nth-child(7) {
         font-size: 13px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 600; }
       .header-top__menu .menu-hover {
-        display: flex;
         width: 100%;
         min-width: 208px;
         background-color: #141618;
@@ -154,7 +157,10 @@ ul {
           .header-top__menu .menu-hover .hover-list .list-link {
             padding: 9 9 14px 9;
             font-size: 15px;
-            font-weight: 600; }
+            font-weight: 600;
+            color: #fff; }
+            .header-top__menu .menu-hover .hover-list .list-link:hover {
+              color: rgba(255, 255, 255, 0.5); }
           .header-top__menu .menu-hover .hover-list .menu-hover_list li {
             padding: 5px 9px;
             font-size: 13px;
@@ -173,10 +179,10 @@ ul {
         fill: #303133; }
     .header.bg .header-top .header-top__link {
       padding: 27px 0; }
+      .header.bg .header-top .header-top__link .link-menu {
+        color: #303133; }
     .header.bg li:hover {
       color: rgba(48, 49, 51, 0.5); }
-    .header.bg i {
-      color: #303133; }
   .header.watch {
     background-color: #fff;
     color: #303133;
@@ -198,69 +204,102 @@ ul {
     width: 35px; }
   .header.bg .header-top .header-top__link {
     padding: 0; }
+    .header.bg .header-top .header-top__link .link-menu {
+      color: #fff; }
+  .header.bg .header-top i {
+    color: #303133; }
   .header-top {
-    padding: 27px 0;
+    padding: 27px 36px;
     position: initial; }
     .header-top__logo {
       width: 35px;
       height: 35px; }
     .header-top__menu {
       flex-direction: column;
-      max-height: 0vh;
+      height: 0;
       overflow: hidden;
-      transition: all ease-in-out 0.3s;
+      transition: all 0.5s ease-in;
       background-color: #1b1d1f !important;
       color: #fff !important;
       position: absolute;
       left: 0;
       right: 0;
       top: 100%;
-      height: auto;
-      display: inline-block; }
+      display: inline-block;
+      padding-top: 0; }
       .header-top__menu .header-top__link {
+        justify-content: left;
         padding: 0;
-        justify-content: left; }
-      .header-top__menu :nth-child(1) {
-        font-size: 16px;
-        margin: 30px 15px;
+        opacity: 0;
+        transform: scale(1.1) translateY(-24px);
+        transition: none;
+        transition: opacity 0.3s ease-out,transform 0.3s ease-out;
+        font-size: 13px;
+        flex-direction: column; }
+        .header-top__menu .header-top__link .link-menu {
+          padding: 9px 36px;
+          background-color: #1b1d1f; }
+        .header-top__menu .header-top__link .menu-hover {
+          position: initial;
+          display: block;
+          padding: initial;
+          background-color: #1b1d1f; }
+          .header-top__menu .header-top__link .menu-hover .hover-list {
+            display: inline-block;
+            width: 100%; }
+            .header-top__menu .header-top__link .menu-hover .hover-list .list-link {
+              font-size: 13px;
+              padding: 9px 36px;
+              width: 100%; }
+            .header-top__menu .header-top__link .menu-hover .hover-list .menu-hover_list {
+              overflow: hidden; }
+              .header-top__menu .header-top__link .menu-hover .hover-list .menu-hover_list li {
+                font-weight: 600;
+                padding: 9px 36px;
+                margin-left: 10px; }
+      .header-top__menu .header-top__link:nth-child(1) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(2) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition-delay: 0.1s; }
+      .header-top__menu .header-top__link:nth-child(2) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(3) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.15000000000000002s; }
+      .header-top__menu .header-top__link:nth-child(3) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(4) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.2s; }
+      .header-top__menu .header-top__link:nth-child(4) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(5) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.25s; }
+      .header-top__menu .header-top__link:nth-child(5) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(6) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.3s; }
+      .header-top__menu .header-top__link:nth-child(6) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
-      .header-top__menu :nth-child(7) {
-        font-size: 16px;
-        margin: 30px 15px;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.35s; }
+      .header-top__menu .header-top__link:nth-child(7) {
         font-family: 'Quicksand', sans-serif;
-        font-weight: 600; }
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+        transition-delay: 0.4s; }
       .header-top__menu.show {
         display: block;
-        max-height: 100vh;
-        transition: all ease-in-out 0.3s;
+        height: 912px;
         background-color: transparent;
-        color: #303133; }
+        color: #303133;
+        padding-top: 27px; }
+        .header-top__menu.show .header-top__link {
+          opacity: 1;
+          transform: none; }
     .header-top__btn {
       display: block; } }
 .banner, .product, .footer {
