--- a/Version3/V3-Project-4/uni-sass/asset/css/main.css
+++ b/Version3/V3-Project-4/uni-sass/asset/css/main.css
@@ -69,8 +69,54 @@ ul {
       display: none;
       border: none;
       background-color: transparent;
-      font-size: 32px;
-      color: #fff; }
+      padding: 24px 36px 27px 36px; }
+      .header-top__btn .button-menu:active {
+        background-color: transparent; }
+        .header-top__btn .button-menu:active::after {
+          background-color: #303133;
+          top: 0;
+          transform: rotate3d(0, 0, 1, 45deg); }
+      .header-top__btn .button-menu::before:active {
+        background-color: #303133;
+        top: 0;
+        transform: rotate3d(0, 0, 1, 45deg); }
+      .header-top__btn .button-menu::after:active {
+        background-color: #303133;
+        top: 0;
+        transform: rotate3d(0, 0, 1, 45deg); }
+      .header-top__btn .button-menu {
+        height: 2px;
+        width: 20px;
+        background-color: #fff;
+        display: inline-block;
+        line-height: 0;
+        border-radius: 5px;
+        position: relative;
+        transition: background 0.3s 0s ease-in-out; }
+        .header-top__btn .button-menu::before {
+          content: "";
+          height: 2px;
+          width: 20px;
+          background-color: #fff;
+          display: inline-block;
+          line-height: 0;
+          border-radius: 5px;
+          position: absolute;
+          left: 0;
+          top: 6px;
+          transition: top 0.3s ease-in-out,transform 0.3s 0.5s ease-in-out; }
+        .header-top__btn .button-menu::after {
+          content: "";
+          height: 2px;
+          width: 20px;
+          background-color: #fff;
+          display: inline-block;
+          line-height: 0;
+          border-radius: 5px;
+          position: absolute;
+          left: 0;
+          top: -6px;
+          transition: top 0.3s ease-in-out,transform 0.3s 0.5s ease-in-out; }
     .header-top__menu {
       display: inline-flex;
       height: 100%;
@@ -85,11 +131,14 @@ ul {
         padding: 44px 0;
         transition: padding 0.3s ease-in-out; }
         .header-top__menu .header-top__link:hover .menu-hover {
-          display: block; }
+          height: auto;
+          padding: 50px 0; }
         .header-top__menu .header-top__link .link-menu {
           width: 100%;
           color: #fff;
           line-height: normal; }
+          .header-top__menu .header-top__link .link-menu i {
+            display: none; }
           .header-top__menu .header-top__link .link-menu:hover {
             color: rgba(255, 255, 255, 0.5); }
       .header-top__menu .header-top__link:nth-child(1) {
@@ -134,9 +183,9 @@ ul {
         top: 100%;
         left: 0;
         right: 0;
-        padding: 50px 0;
         box-shadow: 0 55px 80px -40px rgba(0, 0, 0, 0.45);
-        display: none; }
+        height: 0;
+        overflow: hidden; }
         .header-top__menu .menu-hover .hover-list {
           padding: 0 27px;
           margin-right: 0px;
@@ -156,11 +205,13 @@ ul {
             color: #fff; }
           .header-top__menu .menu-hover .hover-list .list-link {
             padding: 9 9 14px 9;
-            font-size: 15px;
+            font-size: 13px;
             font-weight: 600;
             color: #fff; }
             .header-top__menu .menu-hover .hover-list .list-link:hover {
               color: rgba(255, 255, 255, 0.5); }
+            .header-top__menu .menu-hover .hover-list .list-link i {
+              display: none; }
           .header-top__menu .menu-hover .hover-list .menu-hover_list li {
             padding: 5px 9px;
             font-size: 13px;
@@ -236,14 +287,32 @@ ul {
         transition: opacity 0.3s ease-out,transform 0.3s ease-out;
         font-size: 13px;
         flex-direction: column; }
+        .header-top__menu .header-top__link:hover .menu-hover {
+          padding: 0;
+          height: 0; }
         .header-top__menu .header-top__link .link-menu {
           padding: 9px 36px;
           background-color: #1b1d1f; }
+          .header-top__menu .header-top__link .link-menu.act i {
+            transform: none; }
+          .header-top__menu .header-top__link .link-menu i {
+            display: block;
+            float: right;
+            height: 100%;
+            top: 0.3em;
+            right: 7px;
+            color: #fff;
+            transition: transform 0.3s ease-out;
+            transform: rotate(-90deg); }
         .header-top__menu .header-top__link .menu-hover {
           position: initial;
-          display: block;
           padding: initial;
-          background-color: #1b1d1f; }
+          background-color: #1b1d1f;
+          overflow: hidden;
+          height: 0;
+          transition: all 0.3s ease-in; }
+          .header-top__menu .header-top__link .menu-hover.add {
+            height: 100%; }
           .header-top__menu .header-top__link .menu-hover .hover-list {
             display: inline-block;
             width: 100%; }
@@ -251,8 +320,21 @@ ul {
               font-size: 13px;
               padding: 9px 36px;
               width: 100%; }
+              .header-top__menu .header-top__link .menu-hover .hover-list .list-link.act i {
+                transform: none; }
+              .header-top__menu .header-top__link .menu-hover .hover-list .list-link i {
+                float: right;
+                top: 0.3em;
+                right: 7px;
+                color: #fff;
+                transition: transform 0.3s ease-out;
+                transform: rotate(-90deg);
+                display: block; }
             .header-top__menu .header-top__link .menu-hover .hover-list .menu-hover_list {
+              height: 0;
               overflow: hidden; }
+              .header-top__menu .header-top__link .menu-hover .hover-list .menu-hover_list.add {
+                height: 100%; }
               .header-top__menu .header-top__link .menu-hover .hover-list .menu-hover_list li {
                 font-weight: 600;
                 padding: 9px 36px;
